<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">浙江游戏大厅</string>
    <string name="game_view_content_description">Game view</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_show_policy_title">个人信息保护指引</string>
    <string name="str_show_tips_title">温馨提示</string>
    <string name="tt_appdownloader_download_unknown_title">&lt;未命名></string>
    <string name="mbridge_cm_feedback_dialog_content_cnr">Click no response</string>
    <string name="mbridge_download_notify_prefix_download">下载：</string>
    <string name="mbridge_cm_progress_status_descri_ins">立即安装</string>
    <string name="tt_appdownloader_notification_request_btn_no">立即下载</string>
    <string name="ksad_left_slide_to_next">左滑试一试</string>
    <string name="tkay_myoffer_panel_version">v%s</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="sig_close_ad_cancel">Cancel</string>
    <string name="tt_appdownloader_notification_download_pause">暂停</string>
    <string name="tt_appdownloader_notification_request_btn_yes">去设置</string>
    <string name="sig_close_ad_message">You will be rewarded with only _SEC_ seconds</string>
    <string name="tkay_confirm_dialog_application_permission">permission</string>
    <string name="dyEffect.getWobble">wobble</string>
    <string name="ksad_leave_persist">残忍离开</string>
    <string name="ksad_default_no_more_tip_or_toast_txt">更多内容请前往快手App查看</string>
    <string name="ksad_request_install_nagative">暂不开启</string>
    <string name="ksad_see_detail">了解详情 ></string>
    <string name="tt_appdownloader_notification_download_space_failed">SdCard空间不足, 下载失败。</string>
    <string name="tt_appdownloader_notification_prepare">准备中</string>
    <string name="tt_appdownloader_notification_install_finished_open">安装完成，点击打开。</string>
    <string name="ksad_right_slide_to_return">右滑返回</string>
    <string name="tkay_cm_dialog_alert_confim_close_warn">Confirm to close?</string>
    <string name="mSplashData.setAdClickText">getAdClickText</string>
    <string name="tkay_cm_feedback_dialog_content_balck_screen">Black screen</string>
    <string name="tkay_splash_count_time_can_skip_not">Auto close after</string>
    <string name="mbridge_reward_video_view_reward_time_complete">you have been rewarded</string>
    <string name="defaults">default</string>
    <string name="tt_appdownloader_label_reserve_wifi">Wi-Fi下恢复</string>
    <string name="ksad_card_tips_pre">预告</string>
    <string name="mbridge_download_notify_open">打开</string>
    <string name="tkay_confirm_dialog_privacy_agreement">privacy</string>
    <string name="tkay_cm_dialog_alert_confim_close_desc">You will not be rewarded after closing the window</string>
    <string name="tkay_reward_appdesc">app desc</string>
    <string name="sig_close_args">Skip %1$d</string>
    <string name="tkay_cm_feedback_dialog_close_close">Close</string>
    <string name="mbridge_reward_video_view_reward_time_left">s left to be rewarded</string>
    <string name="tt_appdownloader_wifi_required_body">您必须使用 WLAN 完成此内容 (<g id="SIZE">%1$s </g>") 的下载。

触摸“"<g id="QUEUE_TEXT">%2$s </g>”可在下次连接到 WLAN 网络时开始下载此内容。</string>
    <string name="tkay_cm_shake_view_click_default_view">View</string>
    <string name="dyAction.getLogicClick">click|alecfc</string>
    <string name="sig_back">Close</string>
    <string name="mbridge_download_notify_network_error">网络异常</string>
    <string name="tt_appdownloader_download_percent"><g id="NUMBER">%1$d</g><g id="PERCENT">%%</g></string>
    <string name="tkay_reward_video_view_reward_time_left">s left to be rewarded</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="ksad_page_load_no_more_tip">无更多内容</string>
    <string name="tkay_basead_ad_text">AD</string>
    <string name="dyEffect.getCountDown">countdown</string>
    <string name="sig_ad">Ad</string>
    <string name="tt_appdownloader_wifi_recommended_body">立即开始下载此内容 (<g id="SIZE">%1$s </g>") 可能会缩短电池的使用时间并/或导致过量使用移动数据连接流量（这可能导致移动运营商向您收费，具体取决于您的流量套餐）。

触摸“"<g id="QUEUE_TEXT">%2$s</g>”可在下次连接到 WLAN 网络时开始下载此内容。</string>
    <string name="ksad_request_install_positive">去开启</string>
    <string name="mbridge_download_notify_pause">暂停</string>
    <string name="tt_appdownloader_button_cancel_download">取消</string>
    <string name="mbridge_reward_appdesc">app desc</string>
    <string name="tt_appdownloader_notification_download_delete">确认要删除%1$s的下载任务吗？</string>
    <string name="tkay_myoffer_shake_full_title">Shake or tap for it</string>
    <string name="tkay_myoffer_feedback_text">Feedback</string>
    <string name="ksad_skip_text">跳过</string>
    <string name="tt_appdownloader_notification_download_open">打开</string>
    <string name="mbridge_download_notify_start_download">开始下载</string>
    <string name="mbridge_splash_count_time_can_skip_s">s</string>
    <string name="tkay_cm_video_auto_play_after">Auto play after</string>
    <string name="tkay_reward_endcard_ad">AD</string>
    <string name="tkay_cm_dialog_alert_confim_close_continue">Continue</string>
    <string name="tt_appdownloader_label_ok">确定</string>
    <string name="tkay_cm_segment_process_bar_hint_text" formatted="false">The %s is playing, %s videos.</string>
    <string name="ksad_download_kwai_waiting">下载信息获取中，请稍后再试。</string>
    <string name="mSplashData.setAppInfo">getAppInfo</string>
    <string name="tt_appdownloader_notification_download_complete_without_install">下载完成</string>
    <string name="mbridge_reward_apptitle">app title</string>
    <string name="tkay_myoffer_reward_exit_confirm_give_up">Give up</string>
    <string name="tt_appdownloader_notification_download_install">安装</string>
    <string name="tkay_reward_video_view_reward_time_complete">you have been rewarded</string>
    <string name="tt_appdownloader_button_start_now">立即开始</string>
    <string name="mbridge_reward_heat_count_unit">w</string>
    <string name="mbridge_cm_progress_status_descri_open">立即打开</string>
    <string name="tkay_myoffer_feedback_report">Report</string>
    <string name="ksad_page_loading_data_error_title">空空如也</string>
    <string name="ksad_reward_playable_load_error_toast">请稍后重试，内容准备中</string>
    <string name="ksad_click_immediate">立即点击</string>
    <string name="mbridge_cm_feedback_dialog_close_close">Close</string>
    <string name="tt_appdownloader_notification_waiting_download_complete_handler">处理中</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="ksad_page_loading_error_retry">重试</string>
    <string name="tkay_cm_dialog_alert_confim_close">Close it</string>
    <string name="tkay_myoffer_feedback_abnormal">Abnormal</string>
    <string name="mbridge_download_notify_prefix_pause">暂停:</string>
    <string name="tkay_reward_apptitle">app title</string>
    <string name="tkay_cm_app_info_publish">Publisher:</string>
    <string name="tkay_cm_click_for_detail">Click now for details</string>
    <string name="mbridge_download_notify_download_interrupt">下载失败，请检查网络</string>
    <string name="tkay_cm_feedback_btn_text">feedback</string>
    <string name="mbridge_cm_progress_status_descri_pause">点击继续</string>
    <string name="mSplashData.setLogoImage">getLogoImage</string>
    <string name="tkay_cm_feedback_dialog_title">feedback</string>
    <string name="dyStrategy.notice">notice</string>
    <string name="mbridge_download_notify_download_finish_to_install">下载完成，点击安装</string>
    <string name="ksad_watch_continue">留下看看</string>
    <string name="tkay_myoffer_feedback_not_interesting">Boring</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="tkay_myoffer_continue">Continue</string>
    <string name="tt_appdownloader_notification_pausing">暂停中</string>
    <string name="mbridge_download_notify_update_finish_to_install">更新完成，点击安装</string>
    <string name="tkay_myoffer_reward_exit_confirm_msg">Watch the video for %s seconds to get rewards. Are you sure you want to leave?</string>
    <string name="mbridge_reward_viewed_text_str">Viewed</string>
    <string name="ksad_data_error_toast">内容获取失败</string>
    <string name="sig_close_ad_ok">Confirm</string>
    <string name="tkay_myoffer_feedback_suggestion">Suggestion</string>
    <string name="tkay_myoffer_feedback_vulgar_porn">Vulgar porn</string>
    <string name="tkay_myoffer_feedback_submit">Submit</string>
    <string name="mbridge_download_notify_continue">继续</string>
    <string name="tkay_myoffer_feedback_can_not_close">Not Close</string>
    <string name="tkay_confirm_dialog_give_up">Give up</string>
    <string name="tkay_myoffer_feedback_induce_click">Induce Click</string>
    <string name="tkay_myoffer_feedback_video_freeze">Video Freeze</string>
    <string name="tkay_confirm_dialog_download_now">Download</string>
    <string name="tkay_myoffer_feedback_violation_of_laws">Illegal</string>
    <string name="tkay_myoffer_feedback_black_white_screen">Show Failed</string>
    <string name="tkay_myoffer_feedback_fraud_ads">Fraud Ads</string>
    <string name="tkay_myoffer_feedback_plagiarism">Plagiarism</string>
</resources>