<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/tkay_myoffer_bg_feedback_dialog" android:paddingLeft="12.0dp" android:paddingRight="12.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/tkay_myoffer_feedback_iv_close" android:layout_width="22.0dp" android:layout_height="22.0dp" android:layout_marginTop="9.0dp" android:src="@drawable/tkay_myoffer_feedback_dialog_close" android:layout_alignParentRight="true" />
    <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/tkay_myoffer_feedback_tv_abnormal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dp" android:text="@string/tkay_myoffer_feedback_abnormal" android:layout_below="@id/tkay_myoffer_feedback_iv_close" />
    <LinearLayout android:orientation="horizontal" android:id="@id/tkay_myoffer_feedback_ll_abnormal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:layout_below="@id/tkay_myoffer_feedback_tv_abnormal">
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_1" android:tag="1" android:text="@string/tkay_myoffer_feedback_video_freeze" style="@style/tkay_myoffer_feedback_textview_style_land" />
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_2" android:tag="2" android:layout_marginLeft="14.0dp" android:layout_marginRight="14.0dp" android:text="@string/tkay_myoffer_feedback_black_white_screen" style="@style/tkay_myoffer_feedback_textview_style_land" />
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_3" android:tag="3" android:text="@string/tkay_myoffer_feedback_can_not_close" style="@style/tkay_myoffer_feedback_textview_style_land" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/tkay_myoffer_feedback_tv_report_ad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/tkay_myoffer_feedback_report" android:layout_below="@id/tkay_myoffer_feedback_ll_abnormal" />
    <LinearLayout android:orientation="horizontal" android:id="@id/tkay_myoffer_feedback_ll_report_ad_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:layout_below="@id/tkay_myoffer_feedback_tv_report_ad">
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_4" android:tag="4" android:text="@string/tkay_myoffer_feedback_induce_click" style="@style/tkay_myoffer_feedback_textview_style_land" />
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_5" android:tag="5" android:layout_marginLeft="14.0dp" android:layout_marginRight="14.0dp" android:text="@string/tkay_myoffer_feedback_violation_of_laws" style="@style/tkay_myoffer_feedback_textview_style_land" />
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_6" android:tag="6" android:text="@string/tkay_myoffer_feedback_fraud_ads" style="@style/tkay_myoffer_feedback_textview_style_land" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/tkay_myoffer_feedback_ll_report_ad_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:layout_below="@id/tkay_myoffer_feedback_ll_report_ad_1">
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_7" android:tag="7" android:text="@string/tkay_myoffer_feedback_plagiarism" style="@style/tkay_myoffer_feedback_textview_style_land" />
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_8" android:tag="8" android:layout_marginLeft="14.0dp" android:layout_marginRight="14.0dp" android:text="@string/tkay_myoffer_feedback_vulgar_porn" style="@style/tkay_myoffer_feedback_textview_style_land" />
        <com.tkay.basead.ui.FeedbackTextView android:id="@id/tkay_myoffer_feedback_tv_9" android:tag="9" android:text="@string/tkay_myoffer_feedback_not_interesting" style="@style/tkay_myoffer_feedback_textview_style_land" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/tkay_myoffer_feedback_tv_other_suggestion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/tkay_myoffer_feedback_suggestion" android:layout_below="@id/tkay_myoffer_feedback_ll_report_ad_2" />
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tkay_myoffer_feedback_tv_commit" android:background="@drawable/tkay_myoffer_bg_feedback_submit" android:layout_width="167.0dp" android:layout_height="30.0dp" android:layout_marginBottom="14.0dp" android:text="@string/tkay_myoffer_feedback_submit" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <EditText android:textSize="14.0sp" android:gravity="left|top" android:id="@id/tkay_myoffer_feedback_et" android:background="@drawable/tkay_myoffer_bg_feedback_textview_normal" android:padding="4.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="8.0dp" android:layout_marginBottom="10.0dp" android:maxLength="100" android:layout_above="@id/tkay_myoffer_feedback_tv_commit" android:layout_below="@id/tkay_myoffer_feedback_tv_other_suggestion" />
</RelativeLayout>
