<?xml version="1.0" encoding="utf-8"?>
<com.tkay.core.common.ui.component.RoundRelativeLayout android:background="@android:color/white" android:paddingLeft="15.0dp" android:paddingRight="15.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.tkay.core.common.ui.component.RoundImageView android:id="@id/tkay_confirm_dialog_icon" android:layout_width="60.0dp" android:layout_height="60.0dp" android:layout_marginTop="30.0dp" android:layout_centerHorizontal="true" />
    <com.tkay.core.common.ui.MarqueeTextView android:textSize="@dimen/tkay_confirm_dialog_text_size_large" android:textColor="@color/tkay_confirm_dialog_d9000000" android:ellipsize="marquee" android:id="@id/tkay_confirm_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dp" android:singleLine="true" android:layout_below="@id/tkay_confirm_dialog_icon" android:layout_centerHorizontal="true" android:marqueeRepeatLimit="marquee_forever" />
    <TextView android:textSize="@dimen/tkay_confirm_dialog_text_size_normal" android:textColor="@color/tkay_confirm_dialog_cccccc" android:ellipsize="end" android:id="@id/tkay_confirm_dialog_version_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:singleLine="true" android:layout_below="@id/tkay_confirm_dialog_title" android:layout_centerHorizontal="true" />
    <com.tkay.core.common.ui.MarqueeTextView android:textSize="@dimen/tkay_confirm_dialog_text_size_normal" android:textColor="@color/tkay_confirm_dialog_cccccc" android:ellipsize="marquee" android:id="@id/tkay_confirm_dialog_publisher_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_below="@id/tkay_confirm_dialog_version_name" android:layout_centerHorizontal="true" android:marqueeRepeatLimit="marquee_forever" />
    <TextView android:textSize="@dimen/tkay_confirm_dialog_text_size_normal" android:textColor="@color/tkay_confirm_dialog_cccccc" android:id="@id/tkay_confirm_dialog_give_up" android:padding="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" android:text="@string/tkay_confirm_dialog_give_up" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <Button android:textSize="@dimen/tkay_confirm_dialog_text_size_large" android:textColor="#d9ffffff" android:layout_gravity="center" android:id="@id/tkay_confirm_dialog_download_now" android:background="@drawable/tkay_confirm_dialog_btn_cta" android:layout_width="match_parent" android:layout_height="@dimen/tkay_confirm_dialog_btn_height" android:layout_marginBottom="5.0dp" android:text="@string/tkay_confirm_dialog_download_now" android:layout_above="@id/tkay_confirm_dialog_give_up" />
    <RelativeLayout android:id="@id/tkay_confirm_dialog_container" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@id/tkay_confirm_dialog_download_now" android:layout_below="@id/tkay_confirm_dialog_publisher_name" android:layout_centerHorizontal="true">
        <View android:id="@id/tkay_confirm_dialog_center_line" android:background="@color/tkay_confirm_dialog_d8d8d8" android:layout_width="1.0dp" android:layout_height="12.0dp" android:layout_marginTop="11.0dp" android:text="|" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/tkay_confirm_dialog_text_size_normal" android:textColor="@color/tkay_confirm_dialog_0244e5" android:id="@id/tkay_confirm_dialog_privacy_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dp" android:text="@string/tkay_confirm_dialog_privacy_agreement" android:layout_toLeftOf="@id/tkay_confirm_dialog_center_line" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/tkay_confirm_dialog_text_size_normal" android:textColor="@color/tkay_confirm_dialog_0244e5" android:id="@id/tkay_confirm_dialog_permission_manage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/tkay_confirm_dialog_application_permission" android:layout_toRightOf="@id/tkay_confirm_dialog_center_line" android:layout_centerVertical="true" />
    </RelativeLayout>
</com.tkay.core.common.ui.component.RoundRelativeLayout>
