<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/mbridge_download_notify_parent_view" android:paddingLeft="14.0dp" android:paddingTop="8.0dp" android:paddingRight="14.0dp" android:paddingBottom="11.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/mbridge_download_notify_target_icon" android:background="@null" android:layout_width="32.0dp" android:layout_height="32.0dp" android:layout_marginTop="3.0dp" />
        <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/mbridge_download_notify_target_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="@string/mbridge_download_notify_start_download" android:maxLines="1" android:maxEms="9" android:layout_toRightOf="@id/mbridge_download_notify_target_icon" style="@style/TextAppearance.Compat.Notification.Title" />
        <ImageView android:layout_gravity="center_vertical" android:id="@id/mbridge_download_notify_download_icon" android:layout_width="13.0dp" android:layout_height="13.0dp" android:layout_marginLeft="10.0dp" android:src="@drawable/mbridge_download_notice_content_icon_download" android:layout_toRightOf="@id/mbridge_download_notify_target_icon" android:layout_alignBottom="@id/mbridge_download_notify_target_icon" />
        <TextView android:textSize="12.0sp" android:ellipsize="end" android:gravity="center" android:id="@id/mbridge_download_notify_progress_progess" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:text="0%" android:maxLines="1" android:maxEms="9" android:layout_toRightOf="@id/mbridge_download_notify_download_icon" android:layout_below="@id/mbridge_download_notify_target_name" android:textAllCaps="false" style="@style/TextAppearance.Compat.Notification" />
        <ProgressBar android:id="@id/mbridge_download_notify_progress" android:layout_width="match_parent" android:layout_height="4.0dp" android:layout_marginTop="9.0dp" android:progressDrawable="@drawable/mbridge_download_progress_drawable" android:layout_below="@id/mbridge_download_notify_target_icon" android:layout_alignLeft="@id/mbridge_download_notify_target_icon" android:layout_alignParentRight="@id/mbridge_download_notify_progress_progess" android:layout_alignStart="@id/mbridge_download_notify_target_icon" android:layout_alignParentEnd="@id/mbridge_download_notify_progress_progess" style="?android:progressBarStyleHorizontal" />
        <TextView android:textSize="14.0sp" android:textColor="#ff80c32e" android:ellipsize="end" android:gravity="center" android:id="@id/mbridge_download_notify_progress_status" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="安装" android:maxLines="1" android:maxEms="9" android:layout_alignParentRight="true" android:textAllCaps="false" android:layout_alignParentEnd="true" style="@style/TextAppearance.Compat.Notification" />
        <TextView android:textSize="14.0sp" android:id="@id/mbridge_download_notify_pause" android:background="@null" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/mbridge_download_notify_pause" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="@style/TextAppearance.Compat.Notification" />
        <TextView android:textSize="14.0sp" android:id="@id/mbridge_download_notify_continue" android:background="@null" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/mbridge_download_notify_continue" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="@style/TextAppearance.Compat.Notification" />
    </RelativeLayout>
</RelativeLayout>
